# Algoritmi

./: CMakeLists.txt  CompanyUser.cpp  CompanyUser.h  Date.cpp  Date.h  GeneralUser.cpp  GeneralUser.h  Graph.cpp  Graph.h  GroupUser.cpp  GroupUser.h  NoticeBoard.cpp  NoticeBoard.h  SimpleUser.cpp  SimpleUser.h  main.cpp
