cmake_minimum_required(VERSION 3.10)
project(ProgettoAlgoritmi2018)

set(CMAKE_CXX_STANDARD 11)

add_executable(ProgettoAlgoritmi2018 main.cpp Graph.cpp Graph.h Date.cpp Date.h GeneralUser.cpp GeneralUser.h GroupUser.cpp GroupUser.h NoticeBoard.cpp NoticeBoard.h CompanyUser.cpp CompanyUser.h SimpleUser.cpp SimpleUser.h)